; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_page_alloc.c_free_pages.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_page_alloc.c_free_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_pages(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %2
  %8 = load i64, i64* %3, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = call i32 @virt_addr_valid(i8* %9)
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  %13 = zext i1 %12 to i32
  %14 = call i32 @VM_BUG_ON(i32 %13)
  %15 = load i64, i64* %3, align 8
  %16 = inttoptr i64 %15 to i8*
  %17 = call i32 @virt_to_page(i8* %16)
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @__free_pages(i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @VM_BUG_ON(i32) #1

declare dso_local i32 @virt_addr_valid(i8*) #1

declare dso_local i32 @__free_pages(i32, i32) #1

declare dso_local i32 @virt_to_page(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
